--- a/app/blog/posts/time-complexity.mdx
+++ b/app/blog/posts/time-complexity.mdx
@@ -1,86 +1,190 @@
 ---
-title: 'Explaination of 'Time Complexity''
+title: 'Explanation of Time Complexity'
 publishedAt: '2024-07-23'
-summary: 'Simple explaination of sorting algorithms'
+summary: 'A comprehensive guide to understanding time complexity in algorithms'
 image: /images/title.png
 ---
 
 <Image
-  alt={`Cheatsheet`}
+  alt={`Time Complexity Overview`}
   src={`/images/title.png`}
   width={1280}
   height={720}
 />
 
-Time complexity is a critical concept in computer science, particularly in algorithm analysis and design. It provides a way to evaluate and compare the efficiency of algorithms, specifically in terms of their execution time relative to the size of the input. Understanding time complexity helps developers and engineers choose the most efficient algorithms for their applications and ensure that systems perform optimally. This essay explores the concept of time complexity, its common notations, and its significance in algorithm design.
+Time complexity is a cornerstone of computer science, offering a lens to evaluate how efficiently an algorithm runs as its input grows. It’s not about counting seconds—it’s about understanding how runtime scales with data size. Whether you’re optimizing a small script or designing a massive system, grasping time complexity lets you pick algorithms that keep performance smooth and scalable. This guide unpacks what time complexity is, its common notations, and why it’s a big deal in algorithm design.
 
 ## What is Time Complexity?
 
-Time complexity measures the amount of computational time an algorithm takes to complete as a function of the input size. It provides a high-level understanding of how an algorithm's running time increases with the size of the input, which is crucial for assessing scalability and performance.
+Time complexity measures how an algorithm’s runtime changes with the size of its input, denoted as \(n\). It’s a high-level way to predict performance without getting bogged down in hardware specifics. Think of it as a growth curve: how much slower does your code get when you throw more data at it?
 
-Time complexity is typically expressed using Big O notation, which describes the upper bound of an algorithm's running time in the worst-case scenario. This allows for a generalized comparison of algorithms without delving into specific hardware or implementation details.
+We use **Big O notation** to express time complexity, focusing on the worst-case scenario—the upper bound of runtime. It ignores constants and smaller terms to give a clear picture of scalability. For example, <Latex>O(n^2)</Latex> tells you the runtime grows quadratically, while <Latex>O(n)</Latex> is linear. **Why does this matter? Because an algorithm’s efficiency can mean the difference between a snappy app and one that crashes under load.**
 
 ## Common Time Complexity Classes
 
 <Image
-  alt={`Cheatsheet`}
+  alt={`Time Complexity Cheatsheet`}
   src={`/images/complex.png`}
   width={1280}
   height={720}
 />
 
-### 1. **Constant Time – O(1)**
+Here’s a rundown of the key time complexity classes, with insights into their behavior and real-world relevance.
 
-An algorithm is said to have constant time complexity, denoted as \(O(1)\), if its running time does not change regardless of the input size. This implies that the time taken to execute the algorithm remains constant even as the size of the input grows. Examples of \(O(1)\) operations include accessing an element in an array or performing simple arithmetic operations.
+### 1. **Constant Time – <Latex>O(1)</Latex>**
 
-### 2. **Logarithmic Time – O(\(\log n\))**
+Constant time, <Latex>O(1)</Latex>, means the runtime stays fixed, no matter the input size. It’s the gold standard of efficiency—fast and predictable. **Think instant lookups, like grabbing a book from a shelf by its number.**
 
-An algorithm has logarithmic time complexity, denoted as \(O(\log n)\), if its running time increases logarithmically with the size of the input. This often occurs in algorithms that reduce the problem size by a constant factor at each step. A classic example is binary search, which efficiently locates an element in a sorted array by repeatedly dividing the search interval in half.
+- **Examples**: Accessing an array element, checking a hash table key.
+- **Why It’s Great**: It’s unaffected by data growth, perfect for quick operations.
 
-### 3. **Linear Time – O(n)**
+### 2. **Logarithmic Time – <Latex>O(\log n)</Latex>**
 
-An algorithm has linear time complexity, denoted as \(O(n)\), if its running time grows linearly with the input size. This means that the time taken is directly proportional to the number of elements in the input. Examples include iterating through an array or list and performing operations on each element.
+Logarithmic time, <Latex>O(\log n)</Latex>, grows slowly—doubling the input adds just a small, fixed amount of time. It’s common when problems are split into smaller chunks repeatedly. **Imagine searching for a word in a dictionary by halving the pages each time.**
 
-### 4. **Linearithmic Time – O(n \log n)**
+- **Examples**: Binary search, balanced tree operations.
+- **Key Insight**: For \(n = 1,000,000\), it takes only about 20 steps (<Latex>\log_2 1,000,000 \approx 20</Latex>).
 
-Linearithmic time complexity, denoted as \(O(n \log n)\), is often seen in efficient sorting algorithms like Merge Sort and Quick Sort. The running time grows linearly with the input size and also involves a logarithmic factor. These algorithms are more efficient than quadratic ones for large datasets.
+### 3. **Linear Time – <Latex>O(n)</Latex>**
 
-### 5. **Quadratic Time – O(n^2)**
+Linear time, <Latex>O(n)</Latex>, scales directly with input size—double the data, double the time. It’s straightforward and intuitive. **Picture reading every page of a book from start to finish.**
 
-An algorithm exhibits quadratic time complexity, denoted as \(O(n^2)\), if its running time is proportional to the square of the input size. This complexity arises in algorithms with nested loops, such as Bubble Sort or Selection Sort, where each element is compared with every other element.
+- **Examples**: Scanning a list, counting items.
+- **When It Works**: Fine for small inputs, but can lag with big data.
 
-### 6. **Cubic Time – O(n^3)**
+### 4. **Linearithmic Time – <Latex>O(n \log n)</Latex>**
 
-Cubic time complexity, denoted as \(O(n^3)\), is seen in algorithms with three nested loops. This complexity is less common but appears in certain matrix operations and other complex algorithms.
+Linearithmic time, <Latex>O(n \log n)</Latex>, blends linear and logarithmic growth. It’s a sweet spot for efficiency in many practical scenarios. **Think of organizing a huge library by sorting books in batches.**
 
-### 7. **Exponential Time – O(2^n)**
+- **Examples**: Merge Sort, Quick Sort.
+- **Why It Shines**: Scales well for large datasets, balancing speed and complexity.
 
-Exponential time complexity, denoted as \(O(2^n)\), is characterized by a running time that doubles with each additional input element. This often occurs in brute-force algorithms, such as solving the Traveling Salesman Problem with all possible routes. Exponential algorithms are generally impractical for large input sizes.
+### 5. **Quadratic Time – <Latex>O(n^2)</Latex>**
 
-### 8. **Factorial Time – O(n!)**
+Quadratic time, <Latex>O(n^2)</Latex>, means runtime squares with input size—nested operations are usually the culprit. **It’s like comparing every student in a class to every other student.**
 
-Factorial time complexity, denoted as \(O(n!)\), represents an extremely rapid growth in running time as the input size increases. Algorithms with factorial time complexity, like certain permutations and combinatorial problems, become infeasible for even moderately sized inputs.
+- **Examples**: Bubble Sort, Selection Sort.
+- **Reality Check**: For \(n = 100\), it’s 10,000 steps—manageable, but slow for big \(n\).
+
+### 6. **Cubic Time – <Latex>O(n^3)</Latex>**
+
+Cubic time, <Latex>O(n^3)</Latex>, triples the nesting, making it much slower. **Imagine checking every possible trio in a group for compatibility.**
+
+- **Examples**: Naive matrix multiplication, certain graph problems.
+- **Scale Warning**: \(n = 100\) means 1,000,000 steps—rarely practical.
+
+### 7. **Exponential Time – <Latex>O(2^n)</Latex>**
+
+Exponential time, <Latex>O(2^n)</Latex>, doubles the runtime with each new input element. It’s a scalability nightmare. **Picture trying every possible combination in a lock with \(n\) dials.**
+
+- **Examples**: Traveling Salesman Problem (brute force), subset sum.
+- **Deep Dive**: For \(n = 30\), it’s over a billion steps; for \(n = 40\), it’s a trillion. **This is why we avoid it unless absolutely necessary.**
+
+### 8. **Factorial Time – <Latex>O(n!)</Latex>**
+
+Factorial time, <Latex>O(n!)</Latex>, grows explosively—faster than exponential. **Think of arranging \(n\) people in every possible order.** It’s the slowest class we commonly encounter.
+
+- **Examples**: Generating all permutations, solving some combinatorial puzzles.
+- **Mind-Blowing Scale**: \(n = 10\) is 3.6 million steps; \(n = 20\) is 2.4 quintillion. **It’s practically theoretical for \(n > 10\).**
+
+### Comparison Table
+
+Here’s how these complexities stack up for different input sizes:
+
+<table>
+  <thead>
+    <tr>
+      <th>Complexity</th>
+      <th><Latex>n = 10</Latex></th>
+      <th><Latex>n = 100</Latex></th>
+      <th><Latex>n = 1,000</Latex></th>
+      <th>Real-World Fit</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><Latex>O(1)</Latex></td>
+      <td>1</td>
+      <td>1</td>
+      <td>1</td>
+      <td>Instant lookups</td>
+    </tr>
+    <tr>
+      <td><Latex>O(\log n)</Latex></td>
+      <td>~3</td>
+      <td>~7</td>
+      <td>~10</td>
+      <td>Search in sorted data</td>
+    </tr>
+    <tr>
+      <td><Latex>O(n)</Latex></td>
+      <td>10</td>
+      <td>100</td>
+      <td>1,000</td>
+      <td>Simple scans</td>
+    </tr>
+    <tr>
+      <td><Latex>O(n \log n)</Latex></td>
+      <td>~33</td>
+      <td>~664</td>
+      <td>~9,966</td>
+      <td>Efficient sorting</td>
+    </tr>
+    <tr>
+      <td><Latex>O(n^2)</Latex></td>
+      <td>100</td>
+      <td>10,000</td>
+      <td>1,000,000</td>
+      <td>Small-scale comparisons</td>
+    </tr>
+    <tr>
+      <td><Latex>O(n^3)</Latex></td>
+      <td>1,000</td>
+      <td>1,000,000</td>
+      <td>1,000,000,000</td>
+      <td>Limited use</td>
+    </tr>
+    <tr>
+      <td><Latex>O(2^n)</Latex></td>
+      <td>1,024</td>
+      <td>~10^30</td>
+      <td>~10^301</td>
+      <td>Brute force</td>
+    </tr>
+    <tr>
+      <td><Latex>O(n!)</Latex></td>
+      <td>3,628,800</td>
+      <td>~10^158</td>
+      <td>Beyond imagination</td>
+      <td>Permutations</td>
+    </tr>
+  </tbody>
+</table>
+
+**Note**: These are approximate step counts to show growth rates. Exact values depend on the algorithm and constants.
 
 ## Significance of Time Complexity
 
-Understanding time complexity is crucial for several reasons:
+Why bother with all this? Here’s the payoff:
 
 ### 1. **Algorithm Efficiency**
 
-Time complexity provides insight into an algorithm’s efficiency, allowing for the comparison of different algorithms. Efficient algorithms can handle larger inputs within reasonable time constraints, making them suitable for real-world applications.
+Time complexity reveals how efficient an algorithm is. **Can your code handle a million users, or will it choke at a thousand?** Lower complexity means better performance.
 
 ### 2. **Scalability**
 
-As input sizes grow, algorithms with lower time complexities scale more gracefully. For instance, an \(O(n \log n)\) algorithm will perform significantly better than an \(O(n^2)\) algorithm for large datasets, making it more scalable.
+As data grows, low-complexity algorithms shine. **An <Latex>O(n \log n)</Latex> sort beats an <Latex>O(n^2)</Latex> one hands-down for big datasets—think millions of records.**
 
 ### 3. **Performance Prediction**
 
-Time complexity allows for performance prediction and benchmarking. By understanding an algorithm’s time complexity, developers can estimate how it will perform under various conditions and optimize it if necessary.
+Knowing time complexity lets you forecast how an algorithm behaves. **Will it scale to your needs, or do you need to rethink your approach?**
 
 ### 4. **Resource Management**
 
-Efficient algorithms contribute to better resource management, including CPU time and memory usage. Choosing algorithms with lower time complexities can lead to more responsive and efficient software systems.
+Efficient algorithms save CPU time and memory. **A well-chosen algorithm keeps your app responsive and your servers happy.**
+
+**Question for You**: If you had to pick between <Latex>O(n^2)</Latex> and <Latex>O(n \log n)</Latex> for a million items, which would you choose—and why?
 
 ## Conclusion
 
-Time complexity is a fundamental concept in algorithm analysis, providing a framework for understanding and evaluating the efficiency of algorithms. By categorizing algorithms into different time complexity classes, developers can make informed decisions about which algorithms to use based on their performance and scalability. Mastery of time complexity enables the design of more efficient and effective algorithms, ultimately leading to better software and computational solutions.
+Time complexity isn’t just theory—it’s a practical tool for building better software. By understanding how algorithms scale, from the lightning-fast <Latex>O(1)</Latex> to the glacial <Latex>O(n!)</Latex>, you can make smart choices about performance and scalability. **Mastering this concept doesn’t just make you a better coder—it makes your systems faster, leaner, and ready for the real world.**
