feat: implement comments feature with GitHub authentication and moderation

--- a/app/blog/posts/sorting-algorithms.mdx
+++ b/app/blog/posts/sorting-algorithms.mdx
@@ -26,12 +26,13 @@ Sorting algorithms split into two big camps: **comparison-based** (elements are 
 
 #### 1. **Bubble Sort – <Latex>O(n^2)</Latex>**
 
-Bubble Sort is the beginner’s classic. It repeatedly compares adjacent elements and swaps them if they’re out of order, “bubbling” larger values to the end. **It’s like sorting a deck of cards by repeatedly swapping neighbors.**
+Bubble Sort is the classic every programmer learns first. It repeatedly compares adjacent elements and swaps them if they're out of order, "bubbling" larger values to the end. **It's like sorting a deck of cards by repeatedly swapping neighbors.**
 
 - **Time Complexity**: <Latex>O(n^2)</Latex> (worst and average).
-- **Pros**: Simple to code, intuitive.
-- **Cons**: Painfully slow for big lists—think \(n = 1,000\) taking a million steps.
-- **Best For**: Tiny datasets or teaching.
+- **Pros**: Simple to code, intuitive to understand.
+- **Cons**: Painfully slow for big lists—think \(n = 1,000\) taking a million comparisons.
+- **Reality Check**: 🚨 **Never use Bubble Sort on real data.** It's great for learning, but production code? That's asking for a performance nightmare. Your users will thank you for picking something better.
+- **Best For**: Teaching algorithms, small toy datasets, and coding interviews to show you know the basics.
 
 ```python
 def bubbleSort(array):
@@ -124,12 +125,13 @@ def merge(left, right):
 
 #### 5. **Quick Sort – <Latex>O(n \log n)</Latex>**
 
-Quick Sort picks a pivot, partitions the array around it, and recursively sorts the partitions. **Think of it as organizing a crowd by picking a height and splitting taller and shorter groups.**
+Quick Sort is an elegant, practical choice: pick a pivot, partition the array around it, and recursively sort the partitions. **It feels like asking a teacher to split a class into "smarter" and "less smart" groups, then repeating with each group.**
 
-- **Time Complexity**: <Latex>O(n \log n)</Latex> (average), <Latex>O(n^2)</Latex> (worst, bad pivot).
-- **Pros**: Fast in practice, in-place sorting.
-- **Cons**: Worst-case is rare but possible; not stable.
-- **Best For**: General-purpose sorting, large datasets.
+- **Time Complexity**: <Latex>O(n \log n)</Latex> (average—usually the case), <Latex>O(n^2)</Latex> (worst, bad pivot selection).
+- **Pros**: Fast in real-world practice, sorts in-place, works well with cache.
+- **Cons**: Unstable sorting; worst-case is rare but can hurt.
+- **Why It Matters**: Quick Sort is the go-to in many languages (Python's `sort()` uses it as part of Timsort). **It balances speed, memory, and practicality better than most.**
+- **Best For**: Production code, large datasets, general-purpose sorting needs.
 
 ```python
 def quickSort(array):
@@ -146,7 +148,14 @@ def quickSort(array):
 
 #### 1. **Counting Sort – <Latex>O(n + k)</Latex>**
 
-Counting Sort counts occurrences of each value and uses those counts to place elements in order. **It’s like sorting marbles by color into pre-labeled bins.**
+Counting Sort doesn't compare—it counts. Count occurrences of each value, then use those counts to place elements in order. **It's clever: you're not sorting marbles; you're counting how many red, blue, and green ones you have, then placing them in order.**
+
+- **Time Complexity**: <Latex>O(n + k)</Latex>, where \(k\) is the range of values.
+- **Pros**: Linear time, very fast for small ranges.
+- **Cons**: Requires extra space; only works on integers or countable items.
+- **When to Use**: Sorting age ranges, grades (0-100), or any bounded integers.
+- **Limitation**: If values span 1 to 1 billion, you need a billion counters. Not practical.
+- **Best For**: Specific use cases where the range is small and fixed.
 
 - **Time Complexity**: <Latex>O(n + k)</Latex> (<Latex>k</Latex> is value range).
 - **Pros**: Lightning-fast for small integer ranges.
@@ -321,4 +330,8 @@ Here’s how these algorithms stack up:
 
 ## Conclusion
 
-Sorting algorithms are the backbone of data organization, each with unique trade-offs. **From the slow-but-steady Bubble Sort to the blazing-fast Quick Sort or Radix Sort, your choice depends on your data and goals.** Need something simple? Go with Insertion Sort. Handling millions of records? Merge Sort or Quick Sort has your back. Got integers? Counting Sort might be your ace.
+Sorting algorithms are deceptively important—they're everywhere, from your email inbox to your Spotify recommendations. **The lesson? There's no one "best" algorithm; it depends on your data, your constraints, and your goals.**
+
+Want to impress someone? Bubble Sort is your teaching moment. Building production systems? Quick Sort and Merge Sort are your reliable partners. Dealing with bounded integers? Counting Sort is a hidden gem. The pragmatists at "The Pragmatic Programmer" put it this way: **know your tools, understand their trade-offs, and pick the right one for the job.**
+
+Next time you sort something, you'll know exactly what's happening under the hood—and why it matters.
