--- a/app/blog/posts/time-complexity.mdx
+++ b/app/blog/posts/time-complexity.mdx
@@ -12,7 +12,7 @@ image: /images/title.png
   height={720}
 />
 
-Time complexity is a cornerstone of computer science, offering a lens to evaluate how efficiently an algorithm runs as its input grows. It’s not about counting seconds—it’s about understanding how runtime scales with data size. Whether you’re optimizing a small script or designing a massive system, grasping time complexity lets you pick algorithms that keep performance smooth and scalable. This guide unpacks what time complexity is, its common notations, and why it’s a big deal in algorithm design.
+Ever written code that works fine on 10 items but crawls when you hit 10,000? That's time complexity. It's not about stopwatches—it's about understanding *how* your code behaves as data grows. Donald Knuth said it best: **"The real problem is that programmers have spent far too much time worrying about efficiency in the wrong places; premature optimization is the root of all evil."** Smart words. Knowing time complexity helps you optimize wisely, not blindly. This guide breaks down what it is, why it matters, and how to spot it in your code.
 
 ## What is Time Complexity?
 
